[gd_scene load_steps=17 format=3 uid="uid://ch2cbv7hx45mv"]

[ext_resource type="Script" path="res://Game.gd" id="1_63bef"]
[ext_resource type="PackedScene" uid="uid://baa32sms6661" path="res://Environment/ScrollingSpaceBackground.tscn" id="2_v8bhm"]
[ext_resource type="PackedScene" uid="uid://cvqvmp7827aft" path="res://Player/Player.tscn" id="3_yigq1"]
[ext_resource type="PackedScene" uid="uid://bxy7t08qvqen0" path="res://Environment/Acid.tscn" id="4_n3b22"]
[ext_resource type="Script" path="res://Environment/Platforms.gd" id="5_xeb3b"]
[ext_resource type="FontFile" uid="uid://c3lxv6oo3pwoc" path="res://UI/Fonts/Montserrat-Bold.ttf" id="6_w68hv"]
[ext_resource type="StyleBox" uid="uid://2nq20mti46kp" path="res://UI/Buttons/ui_button_normal.tres" id="7_juhdt"]
[ext_resource type="StyleBox" uid="uid://camvrosjal57l" path="res://UI/Buttons/ui_button _hover.tres" id="8_r3nul"]
[ext_resource type="StyleBox" uid="uid://badyjckl0f261" path="res://UI/Buttons/ui_button_pressed.tres" id="9_32ox1"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_3tlr8"]
size = Vector2(32, 1024)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_n22sr"]
size = Vector2(32, 1024)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_fc37h"]
size = Vector2(1920, 32)

[sub_resource type="Animation" id="Animation_ymbvd"]
length = 3.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("UI/PanelContainer/MainContainer/Info:text")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1.1, 2, 3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": ["3", "2", "1", "Go!"]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("UI/PanelContainer/MainContainer/Info:theme_override_font_sizes/font_size")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 3.4, 3.5),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [256, 256, 128]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("UI/PanelContainer/MainContainer/Info:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(3, 3.4, 3.5),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_shcfn"]
resource_name = "start_countdown"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("UI/PanelContainer/MainContainer/Info:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(1),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_stue4"]
_data = {
"RESET": SubResource("Animation_ymbvd"),
"start_countdown": SubResource("Animation_shcfn")
}

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_xt6m6"]
content_margin_left = 16.0
content_margin_top = 8.0
content_margin_right = 16.0
content_margin_bottom = 8.0
draw_center = false
expand_margin_left = 16.0
expand_margin_top = 8.0
expand_margin_right = 16.0
expand_margin_bottom = 8.0

[node name="Game" type="Node2D"]
script = ExtResource("1_63bef")
metadata/_edit_vertical_guides_ = [896.0, 544.0]

[node name="Camera2D" type="Camera2D" parent="."]
anchor_mode = 0

[node name="SpaceBackground" parent="." instance=ExtResource("2_v8bhm")]

[node name="Player" parent="." instance=ExtResource("3_yigq1")]
position = Vector2(309, 497)
collision_layer = 3

[node name="Acid" parent="." instance=ExtResource("4_n3b22")]

[node name="Platforms" type="Node2D" parent="."]
script = ExtResource("5_xeb3b")

[node name="BorderRightScreenArea" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 4

[node name="RightSide" type="CollisionShape2D" parent="BorderRightScreenArea"]
position = Vector2(1904, 512)
shape = SubResource("RectangleShape2D_3tlr8")

[node name="DeathArea" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 2

[node name="Back" type="CollisionShape2D" parent="DeathArea"]
position = Vector2(16, 512)
shape = SubResource("RectangleShape2D_n22sr")

[node name="Floor" type="CollisionShape2D" parent="DeathArea"]
position = Vector2(960, 1072)
shape = SubResource("RectangleShape2D_fc37h")

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "RESET"
libraries = {
"": SubResource("AnimationLibrary_stue4")
}

[node name="Timer" type="Timer" parent="."]
wait_time = 3.0
one_shot = true

[node name="UI" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="PanelContainer" type="PanelContainer" parent="UI"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_right = 1920.0
offset_bottom = 1088.0
grow_horizontal = 2
grow_vertical = 2

[node name="MainContainer" type="VBoxContainer" parent="UI/PanelContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_constants/separation = 72

[node name="Info" type="Label" parent="UI/PanelContainer/MainContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("6_w68hv")
theme_override_font_sizes/font_size = 256
text = "3"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Buttons" type="VBoxContainer" parent="UI/PanelContainer/MainContainer"]
visible = false
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_constants/separation = 48
alignment = 1

[node name="Retry" type="Button" parent="UI/PanelContainer/MainContainer/Buttons"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 8
theme_override_colors/font_color = Color(0.815686, 0.996078, 0.356863, 1)
theme_override_colors/font_hover_color = Color(0.815686, 0.996078, 0.356863, 1)
theme_override_colors/font_hover_pressed_color = Color(0.815686, 0.996078, 0.356863, 1)
theme_override_fonts/font = ExtResource("6_w68hv")
theme_override_font_sizes/font_size = 48
theme_override_styles/normal = ExtResource("7_juhdt")
theme_override_styles/hover = ExtResource("8_r3nul")
theme_override_styles/pressed = ExtResource("9_32ox1")
theme_override_styles/focus = ExtResource("7_juhdt")
text = "Play Again"

[node name="Back_to_menu" type="Button" parent="UI/PanelContainer/MainContainer/Buttons"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 8
theme_override_colors/font_color = Color(0.815686, 0.996078, 0.356863, 1)
theme_override_colors/font_hover_color = Color(0.815686, 0.996078, 0.356863, 1)
theme_override_colors/font_hover_pressed_color = Color(0.815686, 0.996078, 0.356863, 1)
theme_override_fonts/font = ExtResource("6_w68hv")
theme_override_font_sizes/font_size = 48
theme_override_styles/normal = ExtResource("7_juhdt")
theme_override_styles/hover = ExtResource("8_r3nul")
theme_override_styles/pressed = ExtResource("9_32ox1")
theme_override_styles/focus = ExtResource("7_juhdt")
text = "Back to menu"

[node name="HatchEggUI" type="Control" parent="."]
visible = false
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="HatchBtnContainer" type="MarginContainer" parent="HatchEggUI"]
layout_mode = 0
offset_left = 1634.0
offset_top = 769.0
offset_right = 1735.0
offset_bottom = 875.0

[node name="HatchEggBtn" type="Button" parent="HatchEggUI/HatchBtnContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_colors/font_color = Color(0.815686, 0.996078, 0.356863, 1)
theme_override_colors/font_hover_color = Color(0.815686, 0.996078, 0.356863, 1)
theme_override_colors/font_focus_color = Color(0.815686, 0.996078, 0.356863, 1)
theme_override_fonts/font = ExtResource("6_w68hv")
theme_override_font_sizes/font_size = 32
theme_override_styles/normal = ExtResource("7_juhdt")
theme_override_styles/hover = ExtResource("8_r3nul")
theme_override_styles/pressed = ExtResource("9_32ox1")
theme_override_styles/focus = ExtResource("9_32ox1")
text = "Hatch
"

[node name="TimeLeftContainer" type="PanelContainer" parent="HatchEggUI"]
layout_mode = 0
offset_left = 1601.0
offset_top = 659.0
offset_right = 1763.0
offset_bottom = 770.0

[node name="TimeLeftLabel" type="Label" parent="HatchEggUI/TimeLeftContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("6_w68hv")
theme_override_font_sizes/font_size = 72
theme_override_styles/normal = SubResource("StyleBoxFlat_xt6m6")
text = "8"
horizontal_alignment = 1
vertical_alignment = 1

[node name="HatchingTimer" type="Timer" parent="."]
wait_time = 8.0
one_shot = true

[node name="SideBlackBars" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="PanelContainer" type="PanelContainer" parent="SideBlackBars"]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_right = 1920.0
offset_bottom = 1080.0
grow_horizontal = 2
grow_vertical = 2

[connection signal="pressed" from="UI/PanelContainer/MainContainer/Buttons/Retry" to="." method="_on_retry_pressed"]
[connection signal="pressed" from="UI/PanelContainer/MainContainer/Buttons/Back_to_menu" to="." method="_on_back_to_menu_pressed"]
[connection signal="pressed" from="HatchEggUI/HatchBtnContainer/HatchEggBtn" to="." method="_on_hatch_egg_btn_pressed"]
[connection signal="timeout" from="HatchingTimer" to="." method="_on_hatching_timer_timeout"]
